# nexus

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.ai/: guide.md
.github/workflows/: ci.yml  publish.yml
nexus-kit/: CHANGELOG.md  README.md  pyproject.toml
nexus-kit-fastapi/: CHANGELOG.md  README.md  pyproject.toml
nexus-kit-fastapi/.ai/: guide.md
nexus-kit-fastapi/src/nexus_kit_fastapi/: http_service.py  inject.py
nexus-kit-fastapi/tests/: _signal_probe.py  test_http_service.py  test_signals.py
nexus-kit/.ai/: guide.md
nexus-kit/src/nexus_kit/: cli.py
nexus-kit/tests/: test_cli.py
src/nexus/: __init__.py  cli.py  root.py
src/nexus/impl/: __init__.py  container_injector.py  service_runner.py
src/nexus/interfaces/: __init__.py  application.py  environment.py
src/nexus/logging/: __init__.py  stdout_handler.py
src/nexus_kit/: cli.py
tests/: test_cli.py  test_environment.py  test_root.py  test_service_runner.py
