[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nexus-kit-fastapi"
version = "0.3.1"
description = "FastAPI + uvicorn as a nexus-kit lifecycle service, with a Depends bridge into the nexus container."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Astislav Bozhevolnov", email = "astislav@gmail.com" }
]
keywords = ["nexus-kit", "fastapi", "uvicorn", "dependency-injection", "lifecycle"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
requires-python = ">=3.12"
dependencies = [
    # Runtime works on any 0.4.12+ kernel. The .nexus-kit AI-guide atlas (where
    # `nexus-kit update-ai-guides` reads this package's allowlisted guide) is a 0.5+
    # feature but NOT a runtime dep — so runtime users are not forced onto 0.5.
    # Upper bound: 0.x minors may break (kernel semver note).
    "nexus-kit>=0.4.12,<0.6",
    "fastapi>=0.115",
    "uvicorn>=0.30",
]

[tool.uv.sources]
nexus-kit = { workspace = true }  # dev resolves to the sibling dir; the published wheel keeps >=0.4.12,<0.6

[dependency-groups]
dev = ["pytest>=8.0", "httpx>=0.27"]

[project.urls]
Homepage = "https://github.com/Astislav/nexus"
Repository = "https://github.com/Astislav/nexus"
Issues = "https://github.com/Astislav/nexus/issues"
Changelog = "https://github.com/Astislav/nexus/blob/master/nexus-kit-fastapi/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/nexus_kit_fastapi"]

[tool.hatch.build.targets.wheel.force-include]
# The AI guide ships inside the wheel; `nexus-kit update-ai-guides` reads it from
# the installed package and writes it into the app's .nexus-kit/ atlas. This
# package is on the kernel's allowlist (_ALLOWED_GUIDE_PACKAGES) — that admits it.
".ai/guide.md" = "nexus_kit_fastapi/.ai/guide.md"
