[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nexus-kit"
version = "0.5.0"
description = "Application kernel for long-lived Python apps: one entry point, typed config, constructor DI, service lifecycle, PyInstaller-safe paths."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Astislav Bozhevolnov", email = "astislav@gmail.com" }
]
keywords = ["framework", "dependency-injection", "application", "bootstrap", "di"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
requires-python = ">=3.12"
dependencies = [
    "injector>=0.24.0",
    "pydantic-settings>=2.14.2",  # 2.12.0-2.14.1: GHSA-4xgf-cpjx-pc3j (secrets_dir symlink traversal)
]

[dependency-groups]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://github.com/Astislav/nexus"
Repository = "https://github.com/Astislav/nexus"
Issues = "https://github.com/Astislav/nexus/issues"
Changelog = "https://github.com/Astislav/nexus/blob/master/nexus-kit/CHANGELOG.md"

[project.scripts]
nexus-kit = "nexus_kit.cli:main"

[project.entry-points."nexus_kit.ai_guides"]
# Declaring this group is how `nexus-kit sync-ai` discovers a package's AI guide
# (the kernel is just another provider). The value names the import package that
# contains `.ai/guide.md`; sync-ai locates the file without importing the module.
guide = "nexus_kit"

[tool.hatch.build.targets.wheel]
packages = ["src/nexus_kit"]

[tool.hatch.build.targets.wheel.force-include]
# The AI guide ships inside the wheel so `nexus-kit sync-ai` can read it from the
# installed package (version-matched), not from the CLI's own template.
".ai/guide.md" = "nexus_kit/.ai/guide.md"
